testsuite/tests/ghc-regress/typecheck/should_compile/tc150.hs
{-# LANGUAGE RankNTypes, ScopedTypeVariables #-}

module ShouldCompile where

f v = (\ (x :: forall a. a->a) -> x) id 'c'
