testsuite/tests/ghc-regress/typecheck/should_fail/tcfail196.hs
{-# LANGUAGE RankNTypes #-}

module ShouldFail where

bar :: Num (forall a. a) => Int -> Int
bar = error "urk"

